<resources>
    <string name="app_name">VocabularyApp</string>

    <!-- AD -->
    <string name="ad_mob_id">ca-app-pub-3940256099942544~3347511713</string>

    <!-- navbar drawer-->
    <string name="string_try_premium">GO PREMIUM!</string>
    <string name="string_glitch">GLITCH</string>
    <string name="string_video_effect">Vocabulary</string>
    <string name="string_instagram">Instagram</string>


    <string name="string_more_apps">More Apps</string>
    <string name="string_rate_us">Rate Us</string>
    <string name="string_join_us">Join Us</string>
    <string name="string_blank">Blank</string>
    <string name="string_gift">Gift (AD)</string>
    <string name="string_contact">Contact Us</string>
    <string name="string_settings">Settings</string>
    <string name="string_about">About</string>
    <string name="string_terms">Terms &amp; Condition</string>


    <!--  Home Screen -->
    <string name="string_app_name">Vocabulary</string>
    <string name="string_app_name_secondary">Vocabulary App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sample_long">Here are some of the most popular IELTS tips/trick that can help you improve their score.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="word1"> بِالضَبْط  </string>
    <string name="word2"> 精确的  </string>
    <string name="word3"> precizan   </string>
    <string name="word4"> přesný   </string>
    <string name="word5"> præcis   </string>


</resources>
