<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/layout_word"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_margin="16dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ralewaymedium"
                    android:gravity="center"
                    android:text="NEW WORD"
                    android:textColor="@color/colorItemStatusText"
                    android:textSize="12sp" />

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/word_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ralewaybold"
                    android:text="dictionary"
                    android:textAllCaps="true"
                    android:textColor="@color/colorItemWordText"
                    android:textSize="20sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/word_text_view">

                    <TextView
                        android:id="@+id/pronouce_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/ralewayregular"
                        android:text="dik-shuh-ner-ee"
                        android:textColor="@color/colorItemSecondText"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="5dp"
                        android:layout_toRightOf="@+id/pronouce_text_view"
                        app:srcCompat="@drawable/ic_volume_up_svg" />

                </RelativeLayout>


            </RelativeLayout>


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_word"
        android:layout_marginBottom="60dp"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="has 1 meaning"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/defination_view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                </androidx.viewpager.widget.ViewPager>

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/translation_view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                </androidx.viewpager.widget.ViewPager>


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/word1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/word2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/word3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/word4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/word5" />

            </LinearLayout>


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Do you know this word ?" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <androidx.appcompat.widget.AppCompatCheckBox
                                    android:layout_width="wrap_content"
                                    android:layout_height="24dp"
                                    android:layout_margin="5dp"
                                    android:buttonTint="@color/colorItemCheckBox"
                                    android:checked="true" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:text="Yes" />


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <androidx.appcompat.widget.AppCompatCheckBox
                                    android:layout_width="wrap_content"
                                    android:layout_height="24dp"
                                    android:layout_margin="5dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:text="No" />


                            </LinearLayout>


                        </LinearLayout>

                    </RelativeLayout>


                </LinearLayout>


            </RelativeLayout>


        </RelativeLayout>


    </LinearLayout>


</RelativeLayout>